# vif

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  sample.env
exploration/: eda.py
src/vif/api/: app.py
src/vif/data_preparation/: load_data.py  preprocess_data.py
src/vif/jobs/: train_classifier.py
src/vif/modeling/: train_model.py
src/vif/utils/: metrics.py
tests/vif/api/: test_app.py
tests/vif/data_preparation/: test_load_data.py  test_preprocess_data.py
