[tool.poetry]
name = "vif"
version = "0.1.0"
description = ""
authors = ["hulkwork "]
readme = "README.md"
packages = [{ include = "vif", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
scikit-learn = "^1.6.0"
mlflow = "^2.18.0"
python-dotenv = "^1.0.1"
fastapi = "^0.115.6"
uvicorn = "^0.32.1"


[tool.poetry.dev-dependencies]
pytest = "^7.0"
black = "^23.0"
flake8 = "^6.0"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
run-train = "vif.jobs.train_classifier:main"